--- a/hrsf92-front-end-capstone-master/package.json
+++ b/hrsf92-front-end-capstone-master/package.json
@@ -22,6 +22,7 @@
     "faker": "^4.1.0",
     "path": "^0.12.7",
     "react": "^16.3.1",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.1",
     "style-loader": "^0.20.3"
   },
