--- a/hrsf92-front-end-capstone-master/package.json
+++ b/hrsf92-front-end-capstone-master/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "react-dev": "webpack -d --watch",
-    "server": "nodemon ./server/index.js"
+    "server": "nodemon ./server/index.js",
+    "seed": "node ./seed.js"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
@@ -20,6 +21,8 @@
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
     "faker": "^4.1.0",
+    "jquery": "^3.3.1",
+    "mongoose": "^5.0.15",
     "path": "^0.12.7",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
