--- a/hrsf92-front-end-capstone-master/package.json
+++ b/hrsf92-front-end-capstone-master/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^5.0.15",
     "path": "^0.12.7",
     "react": "^16.3.1",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.1",
     "style-loader": "^0.20.3"
   },
