--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "react-dev": "webpack -d --watch",
+    "build": "webpack -d --watch",
     "server": "nodemon ./server/index.js",
     "seed": "node ./seed.js"
   },
