--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "build": "webpack -d --watch",
+    "start": "node ./server/index.js",
     "server": "nodemon ./server/index.js",
     "seed": "node ./seed.js",
+    "build": "webpack -d --watch",
+    "build:prod": "webpack -p",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "docker": "npm run build:prod && npm run seed && npm start"
   },
   "dependencies": {
     "babel-core": "^6.26.0",
@@ -39,7 +42,6 @@
     "style-loader": "^0.20.3"
   },
   "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "webpack": "^3.11.0",
     "webpack-cli": "^2.0.14"
   },
