--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Apateez-NearBy",
+  "name": "Apateez-Nearby",
   "version": "",
   "description": "Near by recommendations",
   "author": "Steven Chiang",
@@ -19,6 +19,7 @@
     "docker": "npm run build:prod && npm run seed && npm start"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-jest": "^22.4.3",
     "babel-loader": "^7.1.4",
@@ -43,6 +44,8 @@
     "style-loader": "^0.20.3"
   },
   "devDependencies": {
+    "bluebird": "^3.5.1",
+    "faker": "^4.1.0",
     "webpack": "^3.11.0",
     "webpack-cli": "^2.0.14"
   },
