--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "node ./server/index.js",
-    "server": "nodemon ./server/index.js",
+    "ser": "nodemon ./server/index.js",
     "seed": "node ./seed.js",
     "build": "webpack -d --watch",
     "build:prod": "webpack -p",
@@ -26,6 +26,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "css-loader": "^0.28.11",
     "enzyme": "^3.3.0",
@@ -37,6 +38,7 @@
     "jquery": "^3.3.1",
     "mongoose": "^5.0.15",
     "path": "^0.12.7",
+    "pg-promise": "^8.4.0",
     "react": "^16.3.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.1",
