--- a/.gitignore
+++ b/.gitignore
@@ -28,8 +28,5 @@ package-lock.json
 # Seed
 seed/original
 seed/review
-seed/example.json
-seed/example2.csv
-seed/imageUrls.json
-seed/mongoData.json
-seed/postgresData.csv
+seed/data
+seed/example
