--- a/randomID.yml
+++ b/randomID.yml
@@ -2,11 +2,11 @@ config:
   target: 'http://127.0.0.1:3004'
   phases:
     - duration: 60
-      arrivalRate: 300
+      arrivalRate: 2000
   defaults:
     headers:
       x-my-service-auth: '987401838271002188298567'
 scenarios:
   - flow:
     - get:
-        url: "/api/restaurants/1/nearby"
+        url: "/api/restaurants/" + %RANDOM% + "/nearby"
