--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.1",
     "redis": "^2.8.0",
-    "style-loader": "^0.20.3"
+    "style-loader": "^0.20.3",
+    "faker": "^4.1.0",
+    "newrelic": "^4.1.0"
   },
   "devDependencies": {
     "enzyme": "^3.3.0",
@@ -56,9 +58,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-sql": "^1.1.1",
-    "faker": "^4.1.0",
     "jest": "^22.4.3",
-    "newrelic": "^4.1.0",
     "react-test-renderer": "^16.3.2",
     "webpack": "^3.11.0",
     "webpack-cli": "^2.0.14"
