--- a/package.json
+++ b/package.json
@@ -36,17 +36,18 @@
     "cors": "^2.8.4",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "faker": "^4.1.0",
     "jquery": "^3.3.1",
     "mongoose": "^5.0.15",
+    "newrelic": "^4.1.0",
     "path": "^0.12.7",
     "pg-promise": "^8.4.0",
     "react": "^16.3.1",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.1",
     "redis": "^2.8.0",
-    "style-loader": "^0.20.3",
-    "faker": "^4.1.0",
-    "newrelic": "^4.1.0"
+    "style-loader": "^0.20.3"
   },
   "devDependencies": {
     "enzyme": "^3.3.0",
