--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,14 @@ version: '3'
 services:
     nearby:
       build: .
+      links: 
+        - cache
       depends_on:
-        - 'database'
+        - cache
       ports:
-        - '3004:3004'
+        - 3004:3004
 
-    database:
-      image: mongo:latest
+    cache:
+      image: redis:latest
+      ports:
+        - 6379:6379
