--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Apateez-Nearby",
   "version": "",
   "description": "Near by recommendations",
-  "author": "Steven Chiang",
+  "author": "Belinda Mo",
   "license": "MIT",
   "engines": {
     "node": ">=6.13.0"
@@ -19,7 +19,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "docker": "npm run build:prod && npm run seed && npm start",
+    "docker": "npm run build:prod && npm start",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
@@ -32,11 +32,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "bluebird": "^3.5.1",
-    "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "css-loader": "^0.28.11",
     "express": "^4.16.3",
-    "extract-text-webpack-plugin": "^3.0.2",
     "faker": "^4.1.0",
     "jquery": "^3.3.1",
     "mongoose": "^5.0.15",
