--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.1",
     "redis": "^2.8.0",
-    "style-loader": "^0.20.3"
+    "style-loader": "^0.20.3",
+    "webpack": "^3.11.0",
+    "webpack-cli": "^2.0.14"
   },
   "devDependencies": {
     "enzyme": "^3.3.0",
@@ -58,9 +60,7 @@
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-sql": "^1.1.1",
     "jest": "^22.4.3",
-    "react-test-renderer": "^16.3.2",
-    "webpack": "^3.11.0",
-    "webpack-cli": "^2.0.14"
+    "react-test-renderer": "^16.3.2"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>/client/src/components/TestSetup.js"
